[metadata]
name = lockfile
summary = Platform-independent file locking module
description-file = 
	README
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://launchpad.net/pylockfile
classifier = 
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: POSIX :: Linux
	Operating System :: MacOS
	Operating System :: Microsoft :: Windows :: Windows NT/2000
	Operating System :: POSIX
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 2.6
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.3
	Topic :: Software Development :: Libraries :: Python Modules

[files]
packages = lockfile

[pbr]
warnerrors = true

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

